# test_task

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  library.cpp  library.h
program1/: CMakeLists.txt  main.cpp
program2/: CMakeLists.txt  main.cpp
